Added some documentation about the packages and the install code for tidy, readxl, and here

--- a/plots-ggplot.html
+++ b/plots-ggplot.html
@@ -369,9 +369,21 @@ summary {
 </div>
 
 
-<div id="plotes-with-ggplot2" class="section level1">
-<h1>Plotes with ggplot2</h1>
+<div id="plots-with-ggplot2" class="section level2">
+<h2>Plots with ggplot2</h2>
 <p>We are going to make plots in R using the ggplot2 package from the tidyverse.</p>
+</div>
+<div id="methods" class="section level2">
+<h2>Methods:</h2>
+<p>We will install these <strong>packages</strong></p>
+<ul>
+<li><strong>tidyverse</strong> : suite of packages for wrangling and viz with ggplot</li>
+<li><strong>readxl</strong> : to read in Excels into R</li>
+<li><strong>here</strong> : to help with filepath syntax</li>
+</ul>
+<pre class="r"><code>library(tidyverse) # install.packages(&quot;tidyverse&quot;)
+library(readxl) # install.packages(&quot;readxl&quot;)
+library(here) # install.packages(&quot;here&quot;)</code></pre>
 </div>
 
 
