--- a/plots-ggplot.html
+++ b/plots-ggplot.html
@@ -385,6 +385,23 @@ summary {
 library(readxl) # install.packages(&quot;readxl&quot;)
 library(here) # install.packages(&quot;here&quot;)</code></pre>
 </div>
+<div id="data" class="section level2">
+<h2>Data:</h2>
+<p>Here we will read in the data from the <strong>California National Parks</strong> data set</p>
+<pre class="r"><code>ca_np &lt;- read_csv(here(&quot;data/ca_np.csv&quot;))</code></pre>
+<pre><code>## Parsed with column specification:
+## cols(
+##   region = col_character(),
+##   state = col_character(),
+##   code = col_character(),
+##   park_name = col_character(),
+##   type = col_character(),
+##   visitors = col_double(),
+##   year = col_double()
+## )</code></pre>
+<pre class="r"><code>#alternative code -- omit &#39;here&#39; but then will be filepath specific
+#alternative code 2 -- nere(&quot;data&quot;,&quot;ca_np.csv&quot;)</code></pre>
+</div>
 
 
 
