--- a/pivot_lobsters.html
+++ b/pivot_lobsters.html
@@ -818,6 +818,469 @@ size_mm
 <pre class="r"><code># use ctrl+shift+m for pipe
 # n() counts observations </code></pre>
 </div>
+<div id="two-in-the-pot-summarizing-by-multiple-variables" class="section level2">
+<h2>Two in the pot: Summarizing by multiple variables</h2>
+<pre class="r"><code>lobsta_site_year_sum &lt;-lobsters %&gt;% 
+  group_by(site,year) %&gt;% 
+  summarise(count_by_site_year = n(),
+            mean_size_mm = round(mean(size_mm, na.rm = TRUE),2),
+            stdev_size_mm = round(sd(size_mm, na.rm = TRUE), 2)
+            )
+# used round() to limit to 0.01 place for aesthetics; defaults to 0.0001 </code></pre>
+</div>
+<div id="table-formatting-with-kableextrakable" class="section level2">
+<h2>Table Formatting with kableExtra::kable()</h2>
+<pre class="r"><code>lobsta_site_year_sum %&gt;%
+  kable()</code></pre>
+<table>
+<thead>
+<tr>
+<th style="text-align:left;">
+site
+</th>
+<th style="text-align:right;">
+year
+</th>
+<th style="text-align:right;">
+count_by_site_year
+</th>
+<th style="text-align:right;">
+mean_size_mm
+</th>
+<th style="text-align:right;">
+stdev_size_mm
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+aque
+</td>
+<td style="text-align:right;">
+2012
+</td>
+<td style="text-align:right;">
+38
+</td>
+<td style="text-align:right;">
+71.00
+</td>
+<td style="text-align:right;">
+10.15
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+aque
+</td>
+<td style="text-align:right;">
+2013
+</td>
+<td style="text-align:right;">
+32
+</td>
+<td style="text-align:right;">
+72.12
+</td>
+<td style="text-align:right;">
+12.26
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+aque
+</td>
+<td style="text-align:right;">
+2014
+</td>
+<td style="text-align:right;">
+100
+</td>
+<td style="text-align:right;">
+76.92
+</td>
+<td style="text-align:right;">
+9.32
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+aque
+</td>
+<td style="text-align:right;">
+2015
+</td>
+<td style="text-align:right;">
+83
+</td>
+<td style="text-align:right;">
+68.46
+</td>
+<td style="text-align:right;">
+12.56
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+aque
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:right;">
+48
+</td>
+<td style="text-align:right;">
+68.69
+</td>
+<td style="text-align:right;">
+12.51
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+carp
+</td>
+<td style="text-align:right;">
+2012
+</td>
+<td style="text-align:right;">
+78
+</td>
+<td style="text-align:right;">
+74.36
+</td>
+<td style="text-align:right;">
+14.62
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+carp
+</td>
+<td style="text-align:right;">
+2013
+</td>
+<td style="text-align:right;">
+93
+</td>
+<td style="text-align:right;">
+76.57
+</td>
+<td style="text-align:right;">
+8.71
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+carp
+</td>
+<td style="text-align:right;">
+2014
+</td>
+<td style="text-align:right;">
+79
+</td>
+<td style="text-align:right;">
+79.09
+</td>
+<td style="text-align:right;">
+8.57
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+carp
+</td>
+<td style="text-align:right;">
+2015
+</td>
+<td style="text-align:right;">
+90
+</td>
+<td style="text-align:right;">
+70.66
+</td>
+<td style="text-align:right;">
+14.65
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+carp
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:right;">
+231
+</td>
+<td style="text-align:right;">
+68.90
+</td>
+<td style="text-align:right;">
+12.47
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+ivee
+</td>
+<td style="text-align:right;">
+2012
+</td>
+<td style="text-align:right;">
+26
+</td>
+<td style="text-align:right;">
+66.08
+</td>
+<td style="text-align:right;">
+12.09
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+ivee
+</td>
+<td style="text-align:right;">
+2013
+</td>
+<td style="text-align:right;">
+40
+</td>
+<td style="text-align:right;">
+73.78
+</td>
+<td style="text-align:right;">
+7.64
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+ivee
+</td>
+<td style="text-align:right;">
+2014
+</td>
+<td style="text-align:right;">
+132
+</td>
+<td style="text-align:right;">
+76.02
+</td>
+<td style="text-align:right;">
+17.86
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+ivee
+</td>
+<td style="text-align:right;">
+2015
+</td>
+<td style="text-align:right;">
+361
+</td>
+<td style="text-align:right;">
+69.80
+</td>
+<td style="text-align:right;">
+17.47
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+ivee
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:right;">
+193
+</td>
+<td style="text-align:right;">
+71.62
+</td>
+<td style="text-align:right;">
+13.45
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+mohk
+</td>
+<td style="text-align:right;">
+2012
+</td>
+<td style="text-align:right;">
+83
+</td>
+<td style="text-align:right;">
+77.25
+</td>
+<td style="text-align:right;">
+10.59
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+mohk
+</td>
+<td style="text-align:right;">
+2013
+</td>
+<td style="text-align:right;">
+15
+</td>
+<td style="text-align:right;">
+71.87
+</td>
+<td style="text-align:right;">
+10.19
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+mohk
+</td>
+<td style="text-align:right;">
+2014
+</td>
+<td style="text-align:right;">
+36
+</td>
+<td style="text-align:right;">
+75.75
+</td>
+<td style="text-align:right;">
+10.04
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+mohk
+</td>
+<td style="text-align:right;">
+2015
+</td>
+<td style="text-align:right;">
+296
+</td>
+<td style="text-align:right;">
+59.20
+</td>
+<td style="text-align:right;">
+16.77
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+mohk
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:right;">
+210
+</td>
+<td style="text-align:right;">
+63.01
+</td>
+<td style="text-align:right;">
+11.88
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+napl
+</td>
+<td style="text-align:right;">
+2012
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+73.00
+</td>
+<td style="text-align:right;">
+11.75
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+napl
+</td>
+<td style="text-align:right;">
+2013
+</td>
+<td style="text-align:right;">
+63
+</td>
+<td style="text-align:right;">
+75.32
+</td>
+<td style="text-align:right;">
+12.99
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+napl
+</td>
+<td style="text-align:right;">
+2014
+</td>
+<td style="text-align:right;">
+163
+</td>
+<td style="text-align:right;">
+79.52
+</td>
+<td style="text-align:right;">
+9.56
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+napl
+</td>
+<td style="text-align:right;">
+2015
+</td>
+<td style="text-align:right;">
+270
+</td>
+<td style="text-align:right;">
+78.24
+</td>
+<td style="text-align:right;">
+12.44
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+napl
+</td>
+<td style="text-align:right;">
+2016
+</td>
+<td style="text-align:right;">
+127
+</td>
+<td style="text-align:right;">
+74.39
+</td>
+<td style="text-align:right;">
+10.73
+</td>
+</tr>
+</tbody>
+</table>
+</div>
 
 
 
